feat: update email reset password html

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,52 @@
-<p>Hello <%= @resource.email %>!</p>
+<style type="text/css">
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+    .header {
+        background: #8a8a8a;
+    }
 
-<p><%= link_to 'Change my password', "#{message['redirect-url']}?reset_password_token=#{@token}" %></p>
+    .header .columns {
+        padding-bottom: 0;
+    }
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+    .header p {
+        color: #fff;
+        margin-bottom: 0;
+    }
+
+    .header .wrapper-inner {
+        padding: 20px; /*controls the height of the header*/
+    }
+
+    .header .container {
+        background: #8a8a8a;
+    }
+
+    .wrapper.secondary {
+        background: #f3f3f3;
+    }
+
+</style>
+<!-- move the above styles into your custom stylesheet -->
+
+<container>
+
+  <spacer size="16"></spacer>
+
+  <wrapper class="secondary">
+    <spacer size="16"></spacer>
+    <row>
+      <columns small="12" large="6">
+        <h5>Hello <%= @resource.email %>!</h5>
+      </columns>
+      <columns small="12" large="6">
+        <p>Someone has requested a link to change your password. You can do this through the link below.</p>
+
+        <p><%= link_to 'Change my password', "#{message['redirect-url']}?reset_password_token=#{@token}" %></p>
+
+        <p>If you didn't request this, please ignore this email.</p>
+        <p>Your password won't change until you access the link above and create a new one.</p>
+      </columns>
+    </row>
+  </wrapper>
+
+</container>
